# py_contractor_uk

./: .gitignore  LICENSE  README.md  pyproject.toml
py_contractor/config/: config.py  loggers.py
py_contractor/core/: hmrc_tax_api_accessor.py
py_contractor/dash/: panel_main.py
py_contractor/lib/: logging_config.py
py_contractor/models/: tables.py
py_contractor/tests/lib/: misc_test.py
py_contractor/tests/prototypes/: proto_oauth.py  proto_oauth_panel.py  proto_oauth_panel2.py
py_contractor/tests/reports/: informal_tests__paye_report.html  test__hrmc_vat_report.html
py_contractor/tests/supporting_data/: test_user.txt
py_contractor/tests/test_scripts/: informal_tests__paye.py  test__hrmc_vat.py  test__paye.py
py_efficient_payer/config/: loggers.py
py_efficient_payer/core/: paye.py
